# actix-rest

./: Cargo.toml  README.md
src/: main.rs  models.rs  schemas.rs
src/book/: book_schema.rs  mod.rs
src/book_content/: book_content_schema.rs  mod.rs
src/bookmark/: bookmark_schema.rs  mod.rs
src/edit/: edit_schema.rs  mod.rs
src/user/: mod.rs  user_schema.rs
src/user/user_model/: mod.rs
static/: index.html  index2.htm  response.json
