[package]
name = "actix-rest"
version = "0.1.0"
authors = ["klaus <kodemode@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3"
serde = "1.0"
serde_json = "1.0"
actix-files = "0.5.0"
diesel = { version = "1.4.6", features = ["mysql", "r2d2"] }
r2d2 = "0.8.9"

# to run enter  - cargo watch -x 'run --bin actix-rest' - into your terminal
# then open http://localhost:3000/
