[package]
name = "actix-rest"
version = "0.1.0"
authors = ["klaus <kodemode@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-files = "0.5.0"
diesel = { version = "1.4.6", features = [
	"mysql",
	"r2d2",
	"uuidv07",
	"chrono",
] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
r2d2 = "0.8.9"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }

# to run enter  - cargo watch -x 'run --bin actix-rest' - into your terminal
# then open http://localhost:3000/
